# cop

./: .env.example  .gitignore  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg
apps/authentication/: apps.py  roles.py  urls.py  utils.py
apps/authentication/api/: serializers.py  viewsets.py
apps/authentication/permissions/: permissions.py  users.py
apps/authentication/signals/: receivers.py  senders.py
apps/core/: mixins.py  urls.py  viewsets.py
apps/core/api/: viewsets.py
apps/forums/: __init__.py  base_forum.py  models.py  schemas.py  urls.py
apps/forums/api/: serializers.py  viewsets.py
apps/forums/migrations/: 0004_alter_forum_members.py  (+1 more)
apps/nested_routers/: __init__.py  relations.py  routers.py  serializers.py  viewsets.py
apps/posts/: models.py  schemas.py  urls.py
apps/tasks/: models.py  urls.py
apps/users/: apps.py  models.py  urls.py
config/: settings.py
config/routes/: urls.py  utils.py
cop/: asgi.py  settings.py  urls.py  wsgi.py
deploy/scripts/: build.sh
forum/: models.py  serializers.py  urls.py  viewsets.py
forum/migrations/: 0001_initial.py  0002_comment.py  0003_user_user_type.py  0004_auto_20230123_1415.py
scripts/: build.sh  clear_migrations.bash
src/auth/: roles.py  urls.py  utils.py
src/authentication/: enums.py  urls.py  utils.py
src/comments/: models.py  urls.py
src/config/: settings.py
src/cop/: asgi.py  settings.py  urls.py  utils.py
src/core/: mixins.py  models.py  str_models.py
src/forums/: base_forum.py  models.py  schemas.py  urls.py
src/posts/: models.py  urls.py
src/tasks/: models.py  urls.py
src/users/: models.py  signals.py  urls.py
users/: models.py
(+64 files in other folders)
