[tool.poetry]
name = "cop"
version = "0.1.0"
description = "The COP application for PHEM"
authors = ["code-intensive <justtega97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.1.7"
djangorestframework-simplejwt = "^5.2.2"
django-restframework = "^0.0.1"
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
drf-spectacular = "^0.26.0"
drf-spectacular-sidecar = "^2023.3.1"
python-dotenv = "^1.0.0"
django-cors-headers = "^3.14.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
autoflake = "^2.0.1"
django-extensions = "^3.2.1"
Pillow = "^9.4.0"
sendgrid = "^6.9.7"
django-sendgrid-v5 = "^1.2.2"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
